--- a/flask_domin/templates/index.html
+++ b/flask_domin/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         {% for post in posts %}
-        <img src="{{post.photo_url}}">
+        <div>{{post}}</div>
         {% endfor %}
     </div>
 </body>
