--- a/flask_domin/templates/index.html
+++ b/flask_domin/templates/index.html
@@ -9,7 +9,9 @@
 <body>
     <div>
         {% for post in posts %}
-        <div>{{post}}</div>
+        <img src="{{post.photo_url}}">
+        <div>{{post.name}}</div>
+        <div>{{post.body}}</div>
         {% endfor %}
     </div>
 </body>
