--- a/flask_domin/templates/index.html
+++ b/flask_domin/templates/index.html
@@ -19,6 +19,9 @@
         <div>
             <a href="{{ url_for('post_delete', id=post.id) }}">Delete</a>
         </div>
+        |<div>
+            <a href="{{ url_for('post_update', id=post.id) }}">Edit</a>
+        </div>
         {% endfor %}
     </div>
 </body>
